# recosys-for-online-school

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
k8s/: recosys-deployment.yaml  recosys-ingress.yaml
notebooks/: EDA.ipynb  thoughts.ipynb
scripts/: train_save_model.py
service/: main.py
src/recosys/models/: data_preparation.py  serialize.py  train_model.py
