[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recosys"
version = "0.0.1"
authors = [
    {name = "Aleksey Bondarenko", email = "bondaleksey@gmail.com"},
]
description = "recommendation system for online school"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",    
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

